syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Event {
    string uuid = 1;
    string title = 2;
    google.protobuf.Timestamp startAt = 3;
    google.protobuf.Duration duration = 4;
    string description = 5;
    string user = 6;
    google.protobuf.Duration notifyBefore = 7;
}

message Day {
    google.protobuf.Timestamp date = 1;
}

message EventsResponse {
    repeated Event events = 1;
}

service Events {
    rpc GetEventsForDay (Day) returns (EventsResponse);
    rpc GetEventsForWeek (Day) returns (EventsResponse);
    rpc GetEventsForMonth (Day) returns (EventsResponse);
}